# PlasmidRL

./: .gitignore  CITATION.cff  ICML_REVISION_LOG.md  LICENSE  README.md  docker-compose.yaml  environment.yml  pyproject.toml  rebuttal.md  reviews.md  sft_real_passed.csv
anyscale/: mfe_worker.py  run_ablation.py  run_analysis2_qc.py  run_baselines.py  run_best_of_16_v2.py  run_diversity_probe.py  run_mfe_ray.py  run_rejection_v2.py  run_sft_full.py  run_sft_mfe.py  run_sft_qc.py  run_sft_sweep.py
data/: README.md  ablation_metrics.csv  canonical_oris.fasta  prompts.json
data/annotations/: pACYC184.fasta  pBAD24.fasta  pBAD24_pLann.csv  pBR322.fasta  pBR322_pLann.csv  pBluescript2.fasta  pBluescript2_pLann.csv  pEGFP.fasta  pEGFP_pLann.csv  pET-28a.fasta  pET-28a_pLann.csv  pGEX-4T-1.fasta  pGEX-4T-1_pLann.csv  pUC19.fasta  pUC19_pLann.csv  pcDNA3.fasta  pcDNA3_pLann.csv  px330.fasta  px330_pLann.csv
experiments/: README.md
experiments/data/: addgene_reference_metrics.csv  baselines_qc_metrics.csv  full_ablation_metrics.csv  grpo_temp1.0_metrics.csv  grpo_temp1.0_summary.json  mfe_Base_mfe_summary.json  mfe_GRPO_temp0.9_mfe_summary.json  mfe_GRPO_temp1.0_mfe_summary.json  mfe_RL_length_only_mfe_summary.json  mfe_RL_no_cassette_mfe_summary.json  mfe_RL_no_length_mfe_summary.json  mfe_RL_no_repeat_mfe_summary.json  mfe_SFT_mfe_summary.json  rl_per_prompt_metrics.csv
experiments/notebooks/: 01_pass_rate.py  02_distributions.py  03_mfe_stability.py  04_temperature_sweep.py  05_ablations.py  06_baseline_efficiency.py
figures/: generate_figures.py  index.html
figures/data/: grpo_temp_sweep.csv  mfe_RL_cds_only_mfe_summary.json  mfe_RL_mfe_summary.json  rl_temp_sweep_final.csv
notebooks/: 01_pass_rate.ipynb  01_pass_rate.py  02_distributions.ipynb  02_distributions.py  04_temperature_sweep.ipynb  04_temperature_sweep.py  05_ablations.ipynb  05_ablations.py  06_rejection_sampling.ipynb  06_rejection_sampling.py  07_holdout_likelihood.ipynb  07_holdout_likelihood.py  09_figures.ipynb  09_figures.py
plasmidrl/: ablations.py  config.py  data.py  models.py  style.py
plasmidrl/eval/: eval.py  infer.py
plasmidrl/qc/: __init__.py  blast_ori.py  filter.py  repeats.py
plasmidrl/rewards/: __init__.py
plasmidrl/rewards/bioinformatics/: logger.py  reward_config.py  scorer.py
plasmidrl/runners/: generate_samples.py  grpo.py  grpo_sweep.py  rejection_sampling.py
plasmidrl/utils/: model_utils.py  training_utils.py
scripts/: eval_base_sft.py  launch_ablations.py  launch_baselines.py  launch_rejection_v2.sh  launch_sft_full.py  launch_sft_mfe.py  launch_sft_qc.py  launch_sft_sweep.py
scripts_internal/: compute_ablation_diversity.py  score_mfe_subset.py  upload_ablations_to_bucket.py
src/: ablations.py  main.py
src/eval/: eval.py
src/runners/: grpo.py  rejection_sampling.py
tests/: test_data_loader.py  test_likelihood_smoke.py  test_rewards.py
