[project]
name = "plasmidrl"
version = "0.1.0"
description = "Project based on using RL to make plasmids"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.10.1",
    "boto3>=1.40.54",
    "click>=8.1.7",
    "datasets>=4.1.1",
    "huggingface-hub>=0.36.0",
    "ipykernel>=6.30.1",
    "ipython>=8.18.1",
    "ipywidgets>=8.1.7",
    "jupyter-client>=8.6.3",
    "jupyter-core>=5.8.1",
    "jupyterlab>=4.4.7",
    "optuna>=4.6.0",
    "plasmidkit",
    "psutil>=7.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pytest>=8.4.2",
    "pyzmq>=27.0.2",
    "tensordict>=0.9.1",
    "torchrl[llm]>=0.9.2",
    "tornado>=6.5.2",
    "traitlets>=5.14.3",
    "transformers>=4.56.1,<5.0",
    "trl[vllm]>=0.22.2",
    "vllm>=0.11.0",
    "wandb>=0.21.3",
]


[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "black>=24.0.0",
    "ruff>=0.8.0",
    "mypy>=1.10.0",
]
viz = [
    "marimo>=0.23.1",
    "matplotlib>=3.10",
    "seaborn>=0.13",
]

[tool.uv.sources]
plasmidkit = { git = "https://github.com/McClain-Thiel/plasmid-kit.git" }
