[project]
name = "plasmidrl"
version = "0.1.0"
description = "Reinforcement learning for plasmid sequence design (PlasmidRL, ICML 2026)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "McClain Thiel" },
    { name = "Angus G. Cunningham" },
    { name = "Chris P. Barnes" },
]
keywords = [
    "plasmid",
    "DNA",
    "reinforcement-learning",
    "language-model",
    "synthetic-biology",
    "GRPO",
    "PlasmidGPT",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "biopython>=1.84",
    "click>=8.1.7",
    "huggingface-hub>=1.11.0,<2",
    "marimo>=0.23.1",
    "matplotlib>=3.10",
    "nbformat>=5.10.4",
    "numpy>=1.26",
    "pandas>=2.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyrodigal>=3.4",
    "scipy>=1.13",
]

[project.optional-dependencies]
viz = [
    "seaborn>=0.13",
]
gen = [
    "torch>=2.4",
    "transformers>=5.0",
    "vllm>=0.11.0",
]
train = [
    "plasmidrl[gen]",
    "accelerate>=1.10.1",
    "boto3>=1.40.54",
    "datasets>=4.1.1",
    "optuna>=4.6.0",
    "plasmidkit",
    "ray>=2.40",
    "tensordict>=0.9.1",
    "torchrl[llm]>=0.9.2",
    "trl[vllm]>=0.22.2",
    "wandb>=0.21.3",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "black>=24.0.0",
    "ruff>=0.8.0",
    "mypy>=1.10.0",
]

[tool.uv.sources]
plasmidkit = { git = "https://github.com/McClain-Thiel/plasmid-kit.git" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["plasmidrl"]
